--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Varuna Grand - McCarthy Beach</title>
+    <title>Hotel Varuna Grand</title>
     <meta name = "keywords" content = "Hotel Varuna Grand, Hotel Varuna Grand, McCarthy Beach, Beaches in Delta state, Beaches in Nigeria, beaches in Africa, beaches near me" />
     <meta name = "description" content = " Hotel Varuna Grand popularly known as McCarthy Beach is located in the University town of Abraka in Delta State. It is famous for its Natural white sandy Beach and serene environment." />
 
