removed amenities page

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                 <li class="list-items"><a class="header-link" href="./about.html">About</a></li>
                 <li class="list-items"><a class="header-link" href="./gallery.html">Gallery</a></li>
                 <li class="list-items"><a class="header-link" href="./rooms.html">Rooms</a></li>
-                <li class="list-items"><a class="header-link" href="./amenities.html">Amenities</a></li>
+                <!-- <li class="list-items"><a class="header-link" href="./amenities.html">Amenities</a></li> -->
                 <li class="list-items"><a class="header-link" href="./bookings.html">Bookings</a></li>
                 <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li>
             </ul>
