--- a/bookings.html
+++ b/bookings.html
@@ -85,7 +85,7 @@
                 <li class="list-items"><a class="header-link"  href="./rooms.html">Rooms</a></li>
                 <!-- <li class="list-items"><a class="header-link"  href="./amenities.html">Amenities</a></li> -->
                 <li class="list-items"><a class="header-link" id="active-nav" href="./bookings.html">Bookings</a></li>
-                <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li>
+                <!-- <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li> -->
             </ul>
             <div class = "vertical"></div>
             <button class="head-btn" onclick="window.location.href = './contact.html'">Contact Us</button> 
@@ -463,7 +463,7 @@
 <!-- Bookings Section end-->
 
  <!-- Cookies -->
- <div id="cookieNotice" class="light display-right">
+ <!-- <div id="cookieNotice" class="light display-right">
   <div id="closeIcon">
       <i class="fa-solid fa-circle-xmark fa-xl" style="color: #2C333D;"></i>
   </div>
@@ -478,7 +478,7 @@
           </div>
       </div>
   </div>
-</div>
+</div> -->
 <!-- Cookies End -->
 
     <!-- Footer -->
