--- a/faqs.html
+++ b/faqs.html
@@ -78,7 +78,7 @@
                 <li class="list-items"><a class="header-link" href="./about.html">About</a></li>
                 <li class="list-items"><a class="header-link" href="./gallery.html">Gallery</a></li>
                 <li class="list-items"><a class="header-link"  href="./rooms.html">Rooms</a></li>
-                <li class="list-items"><a class="header-link"  href="./amenities.html">Amenities</a></li>
+                <!-- <li class="list-items"><a class="header-link"  href="./amenities.html">Amenities</a></li> -->
                 <li class="list-items"><a class="header-link"  href="./bookings.html">Bookings</a></li>
                 <li class="list-items"><a class="header-link" id="active-nav" href="./faqs.html">FAQs</a></li>
             </ul>
@@ -264,7 +264,7 @@
 
 
      <!-- Cookies -->
-   <div id="cookieNotice" class="light display-right">
+   <!-- <div id="cookieNotice" class="light display-right">
     <div id="closeIcon">
         <i class="fa-solid fa-circle-xmark fa-xl" style="color: #2C333D;"></i>
     </div>
@@ -279,7 +279,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Cookies End -->
 
     <!-- Footer -->
