--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <li class="list-items"><a class="header-link" href="./rooms.html">Rooms</a></li>
                 <!-- <li class="list-items"><a class="header-link" href="./amenities.html">Amenities</a></li> -->
                 <li class="list-items"><a class="header-link" href="./bookings.html">Bookings</a></li>
-                <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li>
+                <!-- <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li> -->
             </ul>
             <div class = "vertical"></div>
             <button class="head-btn" onclick="window.location.href = './contact.html'">Contact Us</button> 
@@ -346,7 +346,7 @@
    <!-- Reviews End -->
 
    <!-- Cookies -->
-   <div id="cookieNotice" class="light display-right">
+   <!-- <div id="cookieNotice" class="light display-right">
     <div id="closeIcon">
         <i class="fa-solid fa-circle-xmark fa-xl" style="color: #2C333D;"></i>
     </div>
@@ -361,7 +361,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Cookies End -->
    <!-- Footer -->
    <footer class="footer">
