--- a/bookings.html
+++ b/bookings.html
@@ -72,7 +72,7 @@
     <header class="header">
         <div class="header-left">
             <a href="./index.html">
-                <img class="logo" src="./assets/media/logo.png" alt="grh-logo">
+                <img class="logo" src="./assets/media/logo2.jpeg" alt="grh-logo">
             </a>
         </div>
 
