--- a/success.html
+++ b/success.html
@@ -45,7 +45,7 @@
     <header class="header">
         <div class="header-left">
             <a href="./index.html">
-                <img class="logo" src="./assets/media/logo.png" alt="grh-logo">
+                <img class="logo" src="./assets/media/logo2.jpeg" alt="grh-logo">
             </a>
         </div>
 
@@ -56,9 +56,9 @@
                 <li class="list-items"><a class="header-link" href="./about.html">About</a></li>
                 <li class="list-items"><a class="header-link" href="./gallery.html">Gallery</a></li>
                 <li class="list-items"><a class="header-link" href="./rooms.html">Rooms</a></li>
-                <li class="list-items"><a class="header-link" id="active-nav" href="./amenities.html">Amenities</a></li>
+                <!-- <li class="list-items"><a class="header-link" id="active-nav" href="./amenities.html">Amenities</a></li> -->
                 <li class="list-items"><a class="header-link" href="./bookings.html">Bookings</a></li>
-                <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li>
+                <!-- <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li> -->
             </ul>
             <div class = "vertical"></div>
             <button class="head-btn" onclick="window.location.href = './contact.html'">Contact Us</button> 
