--- a/rooms.html
+++ b/rooms.html
@@ -67,7 +67,7 @@
     <header class="header">
         <div class="header-left">
             <a href="./index.html">
-                <img class="logo" src="./assets/media/logo.png" alt="grh-logo">
+                <img class="logo" src="./assets/media/logo2.jpeg" alt="grh-logo">
             </a>
         </div>
 
@@ -80,7 +80,7 @@
                 <li class="list-items"><a class="header-link" id="active-nav" href="./rooms.html">Rooms</a></li>
                 <!-- <li class="list-items"><a class="header-link"  href="./amenities.html">Amenities</a></li> -->
                 <li class="list-items"><a class="header-link" href="./bookings.html">Bookings</a></li>
-                <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li>
+                <!-- <li class="list-items"><a class="header-link" href="./faqs.html">FAQs</a></li> -->
             </ul>
             <div class = "vertical"></div>
             <button class="head-btn" onclick="window.location.href = './contact.html'">Contact Us</button> 
