--- a/contact.html
+++ b/contact.html
@@ -129,8 +129,8 @@
                     <h2 class="header-h2">Contact Information</h2>
 
                     <ul class="contact-info-ul">
-                        <li class="contact-info"> <i class="fa-solid fa-phone " style="color: #fbb03b;"></i><a class="contact-link" href="tel:09157031699">+234 915 703 1699</a></li>
-                        <li class="contact-info"> <i class="fa-solid fa-envelope " style="color: #fbb03b;"></i><a class="contact-link" href="mailto:info@gordonresorthotel.com">info@gordonresorthotel.com</a></li>
+                        <li class="contact-info"> <i class="fa-solid fa-phone " style="color: #fbb03b;"></i><a class="contact-link" href="tel:09157031699"></a></li>
+                        <li class="contact-info"> <i class="fa-solid fa-envelope " style="color: #fbb03b;"></i><a class="contact-link" href="mailto:info@gordonresorthotel.com">hotelvarunagrand@gmail.com</a></li>
                         
                     </ul>
 
@@ -191,10 +191,10 @@
                         <li class="list-items"><a class="footer-nav" href="./about.html">About</a></li>
                         <li class="list-items"><a class="footer-nav" href="./gallery.html">Gallery</a></li>
                         <li class="list-items"><a class="footer-nav" href="./rooms.html">Rooms</a></li>
-                        <li class="list-items"><a class="footer-nav" href="./amenities.html">Amenities</a></li>
+                        <!-- <li class="list-items"><a class="footer-nav" href="./amenities.html">Amenities</a></li> -->
                         <li class="list-items"><a class="footer-nav" href="./bookings.html">Bookings</a></li>
                         <li class="list-items"><a class="footer-nav" id="active-nav"  href="./contact.html">Contact</a></li>
-                        <li class="list-items"><a class="footer-nav" href="./faqs.html">FAQs</a></li>
+                        <!-- <li class="list-items"><a class="footer-nav" href="./faqs.html">FAQs</a></li> -->
                     </ul>
                 </div>
                 <div class="col-12 col-lg-4">
