--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
                         <li class="list-items"><a class="footer-nav" id="active-nav" href="./about.html">About</a></li>
                         <li class="list-items"><a class="footer-nav" href="./gallery.html">Gallery</a></li>
                         <li class="list-items"><a class="footer-nav" href="./rooms.html">Rooms</a></li>
-                        <li class="list-items"><a class="footer-nav" href="./amenities.html">Amenities</a></li>
+                        <!-- <li class="list-items"><a class="footer-nav" href="./amenities.html">Amenities</a></li> -->
                         <li class="list-items"><a class="footer-nav" href="./bookings.html">Bookings</a></li>
                         <li class="list-items"><a class="footer-nav" href="./contact.html">Contact</a></li>
                         <li class="list-items"><a class="footer-nav" href="./faqs.html">FAQs</a></li>
