--- a/rooms.html
+++ b/rooms.html
@@ -64,7 +64,7 @@
    <nav>
     <div class="container">
     <div class="row">
-    <header class="header">
+    <header class="header fixed-header">
         <div class="header-left">
             <a href="./index.html">
                 <img class="logo" src="./assets/media/logo2.jpeg" alt="grh-logo">
