--- a/accommodations/vip.html
+++ b/accommodations/vip.html
@@ -60,10 +60,10 @@
    <nav>
     <div class="container">
     <div class="row">
-    <header class="header">
+    <header class="header fixed-header">
         <div class="header-left">
             <a href="../index.html">
-                <img class="logo" src="../assets/media/logo.png" alt="grh-logo">
+                <img class="logo" src="../assets/media/logo2.jpeg" alt="grh-logo">
             </a>
         </div>
 
@@ -74,9 +74,9 @@
                 <li class="list-items"><a class="header-link" href="../about.html">About</a></li>
                 <li class="list-items"><a class="header-link" href="../gallery.html">Gallery</a></li>
                 <li class="list-items"><a class="header-link" href="../rooms.html">Rooms</a></li>
-                <li class="list-items"><a class="header-link" href="../amenities.html">Amenities</a></li>
+                <!-- <li class="list-items"><a class="header-link" href="../amenities.html">Amenities</a></li> -->
                 <li class="list-items"><a class="header-link" href="../bookings.html">Bookings</a></li>
-                <li class="list-items"><a class="header-link" href="../faqs.html">FAQs</a></li>
+                <!-- <li class="list-items"><a class="header-link" href="../faqs.html">FAQs</a></li> -->
             </ul>
             <div class = "vertical"></div>
             <button class="head-btn" onclick="window.location.href = '../contact.html'">Contact Us</button> 
@@ -242,22 +242,7 @@
 <!-- Room Section end-->
 
  <!-- Cookies -->
- <div id="cookieNotice" class="light display-right">
-    <div id="closeIcon">
-        <i class="fa-solid fa-circle-xmark fa-xl" style="color: #2C333D;"></i>
-    </div>
-    <div class="title-wrap">
-        <h4>Cookie Consent</h4>
-    </div>
-    <div class="content-wrap">
-        <div class="msg-wrap">
-            <p>This website uses cookies or similar technologies, to enhance your browsing experience and provide personalized recommendations. By continuing to use our website, you agree to our  <a style="color:#FBB03B;" href="../privacy-policy.html">Privacy Policy</a></p>
-            <div class="btn-wrap">
-                <button class="cookie-btn" onclick="acceptCookieConsent();">Accept</button>
-            </div>
-        </div>
-    </div>
-</div>
+ 
 <!-- Cookies End -->
 
 
