--- a/gallery.html
+++ b/gallery.html
@@ -129,108 +129,12 @@
     <!-- <div class="gallery-video" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/843532225?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="GRH McCarthy Beach"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> -->
 
     <!-- Images -->
-    <!-- <div class="grid-wrapper">
-        <div class="regular">
+    <div class="grid-wrapper" id = "images-gallary">
+        <!-- <div class="regular">
             <img src="./assets/media/BEACH AND GAME AREA/DSC_3396.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/BEACH AND GAME AREA/IMG_2981.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3407.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3510.jpg" alt="grh-gallery" >
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3690.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3801.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="tall">
-            <img src="./assets/media/Outdoors/IMG_1660.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3831.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/Outdoors/IMG_1755.jpg" alt="grh-gallery"  />
-        </div>
+        </div> -->
         
-        <div class="big">
-            <img src="./assets/media/Beach/DSC_3468.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3920.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="tall">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3573.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3529.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3595.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3689.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3681.jpg" />
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3647.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3753.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3877.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_4363.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_4371.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3791.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3961.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3620.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/Outdoors/DSC_4662.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="big">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3751.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="tall">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3804.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3787.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="regular">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3763.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3886.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="tall">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3607.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3548.jpg" alt="grh-gallery"  />
-        </div>
-        <div class="wide">
-            <img src="./assets/media/BEACH AND GAME AREA/DSC_3590.jpg" alt="grh-gallery"  />
-        </div>
-    </div> -->
+    </div>
 </div>
 </section>
 <!-- Gallery end -->
@@ -311,4 +215,22 @@
 
     <script src="/assets/bootstrap/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
+<script src="config.js"></script>
+<script>
+    try{
+        fetch(`${baseURL}/api/cms?type=Contact-Us`).then((data)=>data.json()).then((data)=>{
+            // console.log(data.data[0])
+            // debugger;
+            let obj = data?.data[0];
+            let dd = '';
+            data?.data[0]?.images?.map((image)=>{
+                dd +=` <div class="regular">
+            <img src="${baseURL}/uploads/${image}" alt="grh-gallery"  />
+        </div>`
+            })
+                document.getElementById("images-gallary").innerHTML=dd;
+                });
+    }catch(e){
+    }
+</script>
 </html>
